# Agent

./: .gitignore  Cargo.toml  README.md  build.sh  start_all.sh  test.sh  trunk.toml
crates/agent-app/: Cargo.toml
crates/agent-app/src/: app.rs  lib.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: event_bus.rs  lib.rs  ports.rs  runtime.rs  tests.rs  tools.rs
crates/agent-core/tests/: wasm.rs
crates/agent-platform/: Cargo.toml
crates/agent-platform/src/: lib.rs  shell.rs  tests.rs  vfs.rs
crates/agent-platform/src/llm/: mod.rs  openai_compat.rs
crates/agent-platform/src/storage/: auto.rs  indexeddb.rs  memory.rs  mod.rs
crates/agent-platform/tests/: wasm.rs
crates/agent-types/: Cargo.toml
crates/agent-types/src/: config.rs  error.rs  event.rs  lib.rs  message.rs  session.rs  tests.rs  tool.rs
crates/agent-types/tests/: wasm.rs
crates/agent-ui/: Cargo.toml
crates/agent-ui/src/: lib.rs  state.rs  tests.rs  theme.rs
crates/agent-ui/src/panels/: chat.rs  mod.rs  settings.rs  terminal.rs
web/: index.html  serve.py  worker.js
