[package]
name = "agent-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM entry point — wires all crates together into an egui application"

[dependencies]
agent-types = { workspace = true }
agent-core = { workspace = true }
agent-platform = { workspace = true }
agent-ui = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
wasm-logger = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[dependencies.web-sys]
workspace = true
features = ["Document", "HtmlCanvasElement", "Element", "Window", "Response"]

[lib]
crate-type = ["cdylib", "rlib"]
