[package]
name = "agent-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types for the Agent runtime — zero platform dependencies"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
