[package]
name = "agent-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "egui-based UI panels for the Agent"

[dependencies]
agent-types = { workspace = true }
agent-core = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
